componentdir = $(pkgdatadir)/component
dist_component_DATA = \
        component/vrml97.xml \
        component/core.xml \
        component/time.xml \
        component/networking.xml \
        component/grouping.xml \
        component/rendering.xml \
        component/shape.xml \
        component/geometry3d.xml \
        component/geometry2d.xml \
        component/text.xml \
        component/sound.xml \
        component/lighting.xml \
        component/texturing.xml \
        component/interpolation.xml \
        component/pointing-device-sensor.xml \
        component/key-device-sensor.xml \
        component/environmental-sensor.xml \
        component/navigation.xml \
        component/environmental-effects.xml \
        component/geospatial.xml \
        component/h-anim.xml \
        component/nurbs.xml \
        component/dis.xml \
        component/event-utilities.xml \
        component/cad-geometry.xml
